--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Julia | Device Slider</title>
+  <title>AppCasts - Shape your app concept.</title>
 
   <!--SEO Meta Tags-->
-  <meta name="description" content="Julia - Multiconcept App Showcase Theme" />
-  <meta name="keywords" content="multipurpose, multiconcept, app showcase, mobile, blog, portfolio, specialty pages, landing, elements, shortcodes, html5, css3, jquery, js, modernizr, gallery, slider, touch, creative" />
-  <meta name="author" content="8Guild" />
+  <meta name="description" content="AppCasts" />
+  <meta name="keywords" content="AppCasts" />
+  <meta name="author" content="AppCasts" />
 
   <!--Mobile Specific Meta Tag-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -22,9 +22,6 @@
 
   <!-- All Theme Styles including Bootstrap, FontAwesome, etc. compiled from styles.scss-->
   <link href="css/styles.css" rel="stylesheet" media="screen">
-
-  <!-- Style Switcher -->
-  <link href="style-switcher/style-switcher.css" rel="stylesheet" media="screen">
 
   <!--Modernizr / Detectizr-->
   <script src="js/vendor/modernizr.custom.js"></script>
@@ -55,27 +52,6 @@
 
   <!-- Page Wrapper -->
   <div class="page-wrapper">
-
-    <!-- Style Switcher -->
-    <div class="style-switcher-toggle">
-      <i class="fa fa-cog"></i>
-    </div>
-    <div class="style-switcher">
-      <span class="close-switcher">&times;</span>
-      <h3>Choose Skin</h3>
-      <a href="http://the8guild.com/themes/html/zurapp/zurapp/" class="skin-choice">
-        <img src="style-switcher/zurapp.png" alt="ZurApp">
-      </a>
-      <a href="http://the8guild.com/themes/html/zurapp/zurapp-alt/" class="skin-choice">
-        <img src="style-switcher/zurapp-alt.png" alt="ZurApp Alt">
-      </a>
-      <a href="http://the8guild.com/themes/html/zurapp/tron/" class="skin-choice">
-        <img src="style-switcher/tron.png" alt="Tron">
-      </a>
-      <span class="skin-choice active">
-        <img src="style-switcher/julia.png" alt="Julia">
-      </span>
-    </div><!-- .style-switcher -->
 
     <!-- Navbar -->
     <!-- Add class ".navbar-sticky" to make navbar stuck when it hits the top of the page. You can also use modifier class like: "navbar-light" to change navbar apperance. The screen width at which navbar collapses can be controlled through the variable "$nav-collapse" in sass/variables.scss -->
@@ -890,8 +866,6 @@
   <script src="js/vendor/magnific-popup.min.js"></script>
   <script src="js/vendor/owl.carousel.min.js"></script>
   <script src="js/scripts.js"></script>
-  <script src="style-switcher/style-switcher.js"></script>
-
 </body><!-- <body> -->
 
 </html>
