--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
-  <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- Pixeden Stroke Icons -->
   <link href="css/vendor/pixeden.css" rel="stylesheet" media="screen">
