--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
           <div class="toolbar text-right">
             <a href="index.html#intro" class="btn btn-sm btn-ghost btn-default scroll-to" data-offset-top="50">Learn More</a>
-            <a href="index.html#download" class="btn btn-sm btn-light scroll-to" data-offset-top="70">Get App</a>
+            <a href="//engine.appcasts.com" class="btn btn-sm btn-light scroll-to" data-offset-top="70">Create Your App</a>
           </div><!-- .toolbar -->
 
           <!-- Use modifier class to apply different submenu (dropdown) animations. Possible options: .submenu-slideUp, .submenu-slideDown, .submenu-flipIn. Please note if no class added to .main-navigation default fadeIn animation will be applied. Note: this is applicable only for Desktop. -->
