--- a/index.html
+++ b/index.html
@@ -83,52 +83,15 @@
         <div class="clearfix">
 
           <div class="toolbar text-right">
-            <a href="index.html#intro" class="btn btn-sm btn-ghost btn-default scroll-to" data-offset-top="50">Learn More</a>
+            <a href="#how" class="btn btn-sm btn-ghost btn-default scroll-to" data-offset-top="50">How it works?</a>
             <a href="//engine.appcasts.com" class="btn btn-sm btn-light scroll-to" data-offset-top="70">Create Your App</a>
           </div><!-- .toolbar -->
 
           <!-- Use modifier class to apply different submenu (dropdown) animations. Possible options: .submenu-slideUp, .submenu-slideDown, .submenu-flipIn. Please note if no class added to .main-navigation default fadeIn animation will be applied. Note: this is applicable only for Desktop. -->
           <nav class="main-navigation submenu-slideDown">
             <ul class="menu">
-              <li class="has-submenu current"><a href="index.html#">Home</a>
-                <ul class="submenu">
-                  <li class="current"><a href="index.html">Device Slider</a></li>
-                  <li><a href="home-app-intro-light.html">App Intro Light</a></li>
-                  <li><a href="home-app-intro-dark.html">App Intro Dark</a></li>
-                  <li><a href="home-scroll-slideshow-scale.html">Scroll Slideshow Scale Effect</a></li>
-                  <li><a href="home-scroll-slideshow-rotate.html">Scroll Slideshow Rotate Effect</a></li>
-                  <li><a href="home-scroll-slideshow-gallery.html">Scroll Slideshow Gallery Effect</a></li>
-                  <li><a href="home-scroll-slideshow-opacity.html">Scroll Slideshow Opacity Effect</a></li>
-                  <li><a href="home-scroll-slideshow-parallax.html">Scroll Slideshow Parallax Effect</a></li>
-                </ul>
-              </li>
-              <li class="has-submenu"><a href="index.html#">Blog</a>
-                <ul class="submenu">
-                  <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                  <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                  <li><a href="blog-no-sidebar.html">Blog No Sidebar</a></li>
-                  <li><a href="single-right-sidebar.html">Single Post Right Sidebar</a></li>
-                  <li><a href="single-left-sidebar.html">Single Post Left Sidebar</a></li>
-                  <li><a href="single-no-sidebar.html">Single Post No Sidebar</a></li>
-                </ul>
-              </li>
-              <li class="has-submenu"><a href="index.html#">Portfolio</a>
-                <ul class="submenu">
-                  <li><a href="portfolio-grid-boxed.html">Portfolio Grid Boxed</a></li>
-                  <li><a href="portfolio-grid-fullwidth.html">Portfolio Grid Full Width</a></li>
-                  <li><a href="portfolio-single.html">Single Project</a></li>
-                </ul>
-              </li>
-              <li class="has-submenu"><a href="index.html#">Pages</a>
-                <ul class="submenu">
-                  <li><a href="pricing.html">Pricing</a></li>
-                  <li><a href="contacts.html">Contacts</a></li>
-                  <li><a href="404.html">404</a></li>
-                  <li><a href="coming-soon-dark.html">Coming Soon Dark</a></li>
-                  <li><a href="coming-soon-light.html">Coming Soon Light</a></li>
-                </ul>
-              </li>
-              <li><a href="elements.html">Elements</a></li>
+              <li class="current"><a class="scroll-to" data-offset-top="0" href="#pricing">Pricing</a></li>
+              <li class="current"><a href="elements.html">Get Started</a></li>
             </ul>
           </nav><!-- .main-navigation -->
         </div><!-- .clearfix -->
@@ -435,7 +398,7 @@
     </section><!-- .split-section -->
 
     <!-- Feature Tabs -->
-    <section class="container padding-top-3x padding-bottom-3x">
+    <section class="container padding-top-3x padding-bottom-3x" id="how">
 
       <div class="space-bottom-2x text-center">
         <h2>Learn how to start working with us</h2>
@@ -585,6 +548,65 @@
         </div><!-- col-sm-4-->
       </div><!-- .row-->
     </section><!-- .container -->
+
+
+
+    <section id="pricing">
+      <div class="container padding-top-3x">
+
+      <div class="space-bottom-2x text-center">
+        <h2>Pricing Plans</h2>
+        <h4>Get started with the pricing plan that <span class="text-primary text-bold">best match your needs.</span></h4>
+      </div>
+
+      <!-- Pricing Plans -->
+      <section class="row">
+
+        <div class="col-sm-4">
+          <!-- Pricing Plan -->
+          <section class="pricing-plan">
+            <header class="pp-title">
+              <h3>Single</h3>
+            </header>
+            <div class="pp-body">
+              <h4>1 website, support, updates and no monthly fees</h4>
+              <div class="pp-price"><span>$</span>99</div>
+              <a href="pricing.html#" class="btn btn-ghost btn-default">Buy Now</a>
+            </div>
+          </section><!-- .pricing-plan -->
+        </div><!-- .col-sm-4 -->
+
+        <div class="col-sm-4">
+          <!-- Pricing Plan -->
+          <!-- Apply ".featured-plan" class to alter the look of Pricing Plan. -->
+          <section class="pricing-plan featured-plan">
+            <header class="pp-title">
+              <h3>Agency</h3>
+            </header>
+            <div class="pp-body">
+              <h4>10 websites, support, updates and no monthly fees</h4>
+              <div class="pp-price"><span>$</span>129</div>
+              <a href="pricing.html#" class="btn btn-ghost btn-light">Buy Now</a>
+            </div>
+          </section><!-- .pricing-plan -->
+        </div><!-- .col-sm-4 -->
+
+        <div class="col-sm-4">
+          <!-- Pricing Plan -->
+          <section class="pricing-plan">
+            <header class="pp-title">
+              <h3>Corporate</h3>
+            </header>
+            <div class="pp-body">
+              <h4>Unlimited websites, support, updates and no monthly fees</h4>
+              <div class="pp-price"><span>$</span>299</div>
+              <a href="pricing.html#" class="btn btn-ghost btn-default">Buy Now</a>
+            </div>
+          </section><!-- .pricing-plan -->
+        </div><!-- .col-sm-4 -->
+      </section><!-- .row.space-bottom-2x -->
+    </div><!-- .container -->
+    </section>
 
     <!-- Testimonials -->
     <!-- Apply modifier color classes: ".gray-bg", ".dark-bg" ".gradient-bg" -->
