--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>AppCasts - Shape your app concept.</title>
-
   <!--SEO Meta Tags-->
   <meta name="description" content="AppCasts" />
   <meta name="keywords" content="AppCasts" />
   <meta name="author" content="AppCasts" />
-
   <!--Mobile Specific Meta Tag-->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   <!--Favicon-->
@@ -91,7 +90,7 @@
           <nav class="main-navigation submenu-slideDown">
             <ul class="menu">
               <li class="current"><a class="scroll-to" data-offset-top="0" href="#pricing">Pricing</a></li>
-              <li class="current"><a href="elements.html">Get Started</a></li>
+              <li><a href="//engine.appcasts.com">Get Started</a></li>
             </ul>
           </nav><!-- .main-navigation -->
         </div><!-- .clearfix -->
