--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
           <div class="col-sm-7 padding-top mobile-center">
             <div class="text-light">
-              <h1>We have made a great app...</h1>
+              <h1>Let's create a app for your business...</h1>
             </div>
             <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor similique a ratione eveniet quas, sunt asperiores, quam ad voluptas distinctio, aliquid culpa consectetur! Quisquam, incidunt culpa corporis fuga aperiam quos.</p>
             <!-- App Store Button -->
@@ -150,7 +150,7 @@
     <!-- Welcome Text -->
     <section class="fw-section padding-top-3x padding-bottom-3x" style="background-image: url(img/home/welcome.png);">
       <div class="container padding-top-3x text-center">
-        <h2 class="text-primary space-top-2x">Welcome text. <span class="text-thin">Huge and very attractive.</span></h2>
+        <h2 class="text-primary space-top-2x">Your ideas. <span class="text-thin">our technology.</span></h2>
         <!-- Apply ".light-skin" class to make button white. -->
         <a href="index.html#intro" class="scroll-down-btn scroll-to space-top-2x" data-offset-top="50">
           <span class="play-btn"><i class="fa fa-angle-down"></i></span>
