--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="text-light">
               <h1>Let's create a app for your business...</h1>
             </div>
-            <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor similique a ratione eveniet quas, sunt asperiores, quam ad voluptas distinctio, aliquid culpa consectetur! Quisquam, incidunt culpa corporis fuga aperiam quos.</p>
+            <p class="text-light">it's easier than you could possibly think..</p>
             <!-- App Store Button -->
             <a href="index.html#" class="btn btn-app-store">
               <i class="fa fa-apple"></i>
