--- a/index.html
+++ b/index.html
@@ -129,19 +129,9 @@
               <h1>Let's create a app for your business...</h1>
             </div>
             <p class="text-light">it's easier than you could possibly think..</p>
-            <!-- App Store Button -->
-            <a href="index.html#" class="btn btn-app-store">
-              <i class="fa fa-apple"></i>
-              <div>
-                <span>Download on the</span>
-                App Store
-              </div>
-            </a>
-            <!-- Google Play Button -->
-            <a href="index.html#" class="btn btn-google-play">
-              <img src="img/google-play.png" alt="Google Play">
-              <span>Get it on</span>
-            </a>
+
+            <a href="index.html#" class="btn btn-lg btn-success">Let's Start</a>
+
           </div>
         </div><!-- .row -->
       </div><!-- .container -->
@@ -150,7 +140,7 @@
     <!-- Welcome Text -->
     <section class="fw-section padding-top-3x padding-bottom-3x" style="background-image: url(img/home/welcome.png);">
       <div class="container padding-top-3x text-center">
-        <h2 class="text-primary space-top-2x">Your ideas. <span class="text-thin">our technology.</span></h2>
+        <h2 class="text-primary space-top-2x">We can shape your ideas. <span class="text-thin">Into a useful app</span></h2>
         <!-- Apply ".light-skin" class to make button white. -->
         <a href="index.html#intro" class="scroll-down-btn scroll-to space-top-2x" data-offset-top="50">
           <span class="play-btn"><i class="fa fa-angle-down"></i></span>
