--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <p class="text-light">it's easier than you could possibly think..</p>
 
-            <a href="index.html#" class="btn btn-lg btn-success">Let's Start</a>
+            <a href="//engine.appcasts.com" class="btn btn-lg btn-success">Let's Start</a>
 
           </div>
         </div><!-- .row -->
@@ -155,7 +155,7 @@
 
         <div class="space-bottom-2x text-center">
           <h2>Our Great Features</h2>
-          <h4>Everything you need to know about one App. Forever. <span class="text-bold text-primary">For free.</span></h4>
+          <h4>Why it is great to create apps with <span class="text-bold text-primary">appCasts.</span></h4>
         </div>
 
         <!-- Features -->
@@ -167,7 +167,7 @@
                 <i class="pe-7s-display1"></i>
               </div>
               <div class="ib-content">
-                <h3>In App Analytics</h3>
+                <h3>Get Stared in no time</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perferendis modi quidem deserunt vero seduco prima vera.</p>
               </div>
             </div>
@@ -178,7 +178,7 @@
                 <i class="pe-7s-phone"></i>
               </div>
               <div class="ib-content">
-                <h3>Fully Responsive</h3>
+                <h3>Multi platform</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perferendis modi quidem deserunt vero seduco prima vera.</p>
               </div>
             </div>
@@ -193,7 +193,7 @@
                 <i class="pe-7s-cloud"></i>
               </div>
               <div class="ib-content">
-                <h3>Cloud Storage</h3>
+                <h3>Realtime app Update</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perferendis modi quidem deserunt vero seduco prima vera.</p>
               </div>
             </div>
@@ -204,7 +204,7 @@
                 <i class="pe-7s-signal"></i>
               </div>
               <div class="ib-content">
-                <h3>WiFi Detection</h3>
+                <h3>Endless Customization</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perferendis modi quidem deserunt vero seduco prima vera.</p>
               </div>
             </div>
@@ -219,7 +219,7 @@
                 <i class="pe-7s-monitor"></i>
               </div>
               <div class="ib-content">
-                <h3>Retina Ready</h3>
+                <h3>24x7 Support</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perferendis modi quidem deserunt vero seduco prima vera.</p>
               </div>
             </div>
@@ -230,7 +230,7 @@
                 <i class="pe-7s-map"></i>
               </div>
               <div class="ib-content">
-                <h3>Integrated Maps</h3>
+                <h3>Integrate with your existing system</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perferendis modi quidem deserunt vero seduco prima vera.</p>
               </div>
             </div>
