--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>AppCasts - Shape your app concept.</title>
+  <title>AppCasts - Create your app.</title>
   <!--SEO Meta Tags-->
   <meta name="description" content="AppCasts" />
   <meta name="keywords" content="AppCasts" />
