--- a/index.html
+++ b/index.html
@@ -124,25 +124,31 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
               <img src="img/device-slider/phone.png" class="phone-mask" alt="Phone">
               <!-- Fallback Cover Screen -->
               <div class="cover">
-                <img src="img/device-slider/screen01.jpg" alt="Screen 1">
+                <img src="https://dummyimage.com/480x800/a32aa3/ffffff&text=Create+app+for+your+online+store" alt="Screen 1">
               </div>
               <div class="carousel">
                 <div class="inner">
-                  <img src="img/device-slider/screen01.jpg" alt="Screen 1">
-                  <img src="img/device-slider/screen02.jpg" alt="Screen 2">
-                  <img src="img/device-slider/screen03.jpg" alt="Screen 3">
-                  <img src="img/device-slider/screen04.jpg" alt="Screen 4">
+                  <img src="https://dummyimage.com/480x800/a32aa3/ffffff&text=Create+app+for+your+online+store" alt="Screen 1">
+                  <img src="https://dummyimage.com/480x800/a32aa3/ffffff&text=Turn+your+website+into+app" alt="Screen 1">
+                  <img src="https://dummyimage.com/480x800/a32aa3/ffffff&text=Create+a+Notification+app" alt="Screen 1">
+                  <img src="https://dummyimage.com/480x800/a32aa3/ffffff&text=Youtube+Videos+Playlist+app" alt="Screen 1">
+                  <img src="https://dummyimage.com/480x800/a32aa3/ffffff&text=Monitize+your+app+with+AdMob" alt="Screen 1">
+
                 </div>
               </div>
             </div><!-- .phone-carousel -->
           </div>
           <div class="col-sm-7 padding-top mobile-center">
             <div class="text-light">
-              <h1>Let's create a app for your business...</h1>
+              <h1>Create Android and iOS apps</h1>
             </div>
-            <p class="text-light">it's easier than you could possibly think..</p>
+            <p class="text-light">
+              <ul>
+          </ul>
+              it's easier than you could possibly think..
+            </p>
 
-            <a href="//engine.appcasts.com" class="btn btn-lg btn-success">Let's Start</a>
+            <a href="//engine.appcasts.com" class="btn btn-lg btn-success">Create app free</a>
 
           </div>
         </div><!-- .row -->
@@ -152,7 +158,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
     <!-- Welcome Text -->
     <section class="fw-section padding-top-3x padding-bottom-3x" style="background-image: url(img/home/welcome.png);">
       <div class="container padding-top-3x text-center">
-        <h2 class="text-primary space-top-2x"><span class="text-thin">We can create </span> Apps <span class="text-thin">for your</span> Business</h2>
+        <h2 class="text-primary space-top-2x"><span class="text-thin">You can create </span> Apps <span class="text-thin">for your</span> Business</h2>
         <!-- Apply ".light-skin" class to make button white. -->
         <!--<a href="index.html#intro" class="scroll-down-btn scroll-to space-top-2x" data-offset-top="50">-->
           <!--<span class="play-btn"><i class="fa fa-angle-down"></i></span>-->
