--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
               it's easier than you could possibly think..
             </p>
 
-            <a href="//engine.appcasts.com" class="btn btn-lg btn-success">Create app free</a>
+            <a href="//engine.appcasts.com" class="btn btn-lg btn-success">Create a app Now, For free</a>
 
           </div>
         </div><!-- .row -->
