--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>AppCasts - Create your app.</title>
   <!--SEO Meta Tags-->
-  <meta name="description" content="AppCasts" />
-  <meta name="keywords" content="AppCasts" />
+  <meta name="description" content="Create iOS and Android app for your business by using the ready Plugins, Just enter your details and app is ready for you." />
+  <meta name="keywords" content="AppCasts, app, creator, builder, ios, android, developer,apps, application" />
   <meta name="author" content="AppCasts" />
   <!--Mobile Specific Meta Tag-->
 
