--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
           <nav class="main-navigation submenu-slideDown">
             <ul class="menu">
               <!--<li class="current"><a class="scroll-to" data-offset-top="0" href="#pricing">Its free</a></li>-->
+              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdANLl-qcbeiCvWZ5VO-OgpDP7qVWJ3Xurmw_11obbcjM1K_w/viewform?usp=sf_link">BE A PARTNER</a></li>
               <li><a href="//engine.appcasts.com/login">Login</a></li>
               <li><a href="//engine.appcasts.com/register">Register</a></li>
             </ul>
